[feat] 로그인 ui 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Anshim">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name="org.sopt.anshim.presentation.sign.screens.SignInActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.home.screens.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
