--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
             android:name=".presentation.home.screens.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.friend.FriendActivity"
+            android:name=".presentation.friend.screens.FriendDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.friend.screens.FriendActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
