[delete] /.idea 내 일부 파일 트래킹 제거

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /.idea/assetWizardSettings.xml
 /.idea/misc.xml
 /.idea/git_toolbox_prj.xml.xml
+/.idea/git_toolbox_prj.xml
+/.idea/deploymentTargetDropDown.xml
 .DS_Store
 /build
 /captures
