[feat] 해당 회차 로또 번호와 랜덤 로또 번호를 비교하여 등수 계산하기 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
