--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
     // Room
     def room_version = "2.4.2"
     implementation "androidx.room:room-ktx:$room_version"
