[feat] 워크매니저 예제 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         <activity
             android:name=".presentation.github.PushEventActivity"
             android:exported="false" />
+        <activity
+            android:name=".presentation.WorkManagerActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
