--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="org.sopt.anshim">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".application.AnshimApplication"
@@ -21,13 +22,8 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".presentation.sign.screens.SignInUsernameActivity"
-            android:exported="true"
-            android:windowSoftInputMode="adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".presentation.home.screens.HomeActivity"
             android:exported="false" />
@@ -39,6 +35,14 @@
             android:exported="false" />
         <activity
             android:name=".presentation.github.GithubActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".presentation.gallery.GalleryActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.github.PushEventActivity"
