--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
 
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie:3.7.0'
 }
