--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,17 @@
 buildscript {
     ext {
         hilt_version = '2.42'
+        compose_ui_version = '1.1.1'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.android.tools.build:gradle:7.2.2"
     }
 }
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
