--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,9 @@
         android:theme="@style/Theme.Anshim">
         <activity
             android:name=".presentation.calendar.CalendarActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_calendar"
-            android:theme="@style/Theme.Anshim">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme.Anshim" />
         <activity
             android:name=".presentation.lotto.LottoActivity"
             android:exported="false" />
@@ -38,8 +32,7 @@
         <activity
             android:name=".presentation.sign.screens.SignInUsernameActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".presentation.home.screens.HomeActivity"
             android:exported="false" />
@@ -79,6 +72,15 @@
         <activity
             android:name=".presentation.component.BroadCastActivity"
             android:exported="false" />
+        <activity
+            android:name=".presentation.restaurant.RestaurantDetailActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <receiver
             android:name=".presentation.component.SMSReceiver"
